# BookHub

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  main.py
app/api/: auth.py  books.py  dependencies.py
app/core/: exceptions.py
app/migrations/: env.py
app/migrations/versions/: 2025_11_12_1650-e141a74e96dc_initial_migration.py  2025_11_12_1725-2661a4cf8761_initial_migration.py  2025_11_15_1723-8b7fd85ee985_initial_migration.py
app/models/: books.py  roles.py  users.py
app/repositories/: base.py  books.py  users.py
app/schemas/: books.py  users.py
app/services/: auth.py  books.py
app/utils/: db_manager.py
